maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:-22: error: Unmatched closing brace '}' ignored here
	}
        ^JediEscaper:-21: error: illegal start of statement (no modifiers allowed here)
	override def setY(i: Int)  { 
        ^JediEscaper:-17: error: illegal start of statement (no modifiers allowed here)
	override def setPos(x: Int, y:Int)  { 
        ^JediEscaper:2: error: illegal start of statement (no modifiers allowed here)
override def run() {
^JediEscaper:26: error: Unmatched closing brace '}' ignored here
    }
    ^